--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -9,10 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      - name: Set up Go 1.13
+      - name: Set up Go 1.17
         uses: actions/setup-go@v2
         with:
-          go-version: 1.13
+          go-version: 1.17
         id: go
       
       - name: Install Protoc
@@ -89,24 +89,9 @@ jobs:
           # sync the clients to m3o-web/html
           rsync -avz clients/web/* ../m3o-web/html/
       
-      # https://stackoverflow.com/questions/58033366/how-to-get-current-branch-within-github-actions
-      - name: Extract branch name
-        shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-        id: extract_branch
-
-      - name: Push M3O Web clients
-        uses: dmnemec/copy_file_to_another_repo_action@main
-        if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/beta'
-        env:
-          API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
+      - name: Add & Commit
+        uses: EndBug/add-and-commit@v9.0.0
         with:
-          source_file: 'm3o-web/html/'
-          destination_repo: 'GWT-M3O-TEST/GWT-m3o-web'
-          destination_branch: ${{ steps.extract_branch.outputs.branch }}
-          destination_folder: 'html/'
-          git_server: 'github.com'
-          user_email:  'danieljoudat@gmail.com'
-          user_name: 'lambdaR'
-          use_rsync: true
-          commit_message: 'Commit from GWT-M3O-TEST/GWT-m3o action'
+          cwd: m3o-web
+          message: Push to M3O-Web repo
+          pathspec_error_handling: exitImmediately
